# lubalia

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  TODO.md  program.luba
.idx/: dev.nix
compiler/: Cargo.toml
compiler/src/: lib.rs  save_value.rs  scope.rs
debug/: Cargo.toml
debug/src/: main.rs
debug/src/cli/: commands.rs  mod.rs
debug/src/ui/: mod.rs
dev/: arithmetic.md  deisgn_patterns.md  parser_algorithm.md  test_generated_flowcharts.md
docs/: arithmetic.md  deisgn_patterns.md  parser_algorithm.md  test_generated_flowcharts.md
engine/: Cargo.toml
engine/src/: lib.rs  node.rs  root.rs
engine/src/data/: arithmetic.rs  comparasion.rs  comparsion.rs  conversion.rs  logic.rs  mod.rs
engine/src/lang/: mod.rs
engine/src/node/: expression.rs  statement.rs  type_definition.rs
engine/src/vfs/: mod.rs
engine/src/vm/: context.rs  mod.rs  scope.rs  tick.rs
examples/: program.luba  variables.lub
js/: Cargo.toml
js/demo/: index.html  style.css
js/src/: lib.rs
lang/: Cargo.toml
lang/src/: lib.rs
lang/src/_syntax/: node.rs  root.rs
lang/src/parser/: context.rs  cursor.rs  error.rs  mod.rs
lang/src/syntax/: list.rs  mod.rs  node.rs  root.rs
lang/src/token/: _nomenclature.rs  (+4 more)
src/: eval.rs  lib.rs  main.rs  utils.rs  vfs.rs
src/engine/: mod.rs  node.rs  root.rs
src/lang/: mod.rs  token.rs
src/utils/: transcriber.rs
src/vm/: context.rs  mod.rs  runtime.rs  scope.rs
utils/: Cargo.toml
utils/examples/: transcriber.rs
utils/src/: checkpoint.rs  cursor.rs  lib.rs  loop_through.rs
vm/: Cargo.toml
vm/src/: lib.rs
(+151 files in other folders)
