[package]
name = "lubalia"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
lubengine = { path = "engine" }

[workspace]
members = ["debug", "engine", "utils"]

[workspace.dependencies]
colored = "2.1.0"
