[package]
name = "lubalia"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = { workspace = true }
clap = { workspace = true }
lubengine = { path = "engine" }

[workspace]
members = [ "compiler","debug", "engine", "lang", "utils", "vm"]

[workspace.dependencies]
colored = "2.1.0"
clap = { version = "4.5.11", features = ["derive"] }
